tests/baselines/reference/jsxFactoryIdentifierWithAbsentParameter.errors.txt
tests/cases/compiler/test.tsx(9,17): error TS2552: Cannot find name 'createElement'. Did you mean 'frameElement'?


==== tests/cases/compiler/test.tsx (1 errors) ====
    declare module JSX {
        interface IntrinsicElements {
            [s: string]: any;
        }
    }
    
    export class AppComponent {
        render() {
            return <div />;
                    ~~~
!!! error TS2552: Cannot find name 'createElement'. Did you mean 'frameElement'?
!!! related TS2728 /.ts/lib.dom.d.ts:17166:13: 'frameElement' is declared here.
        }
    }
    